--- a/react_basics/docker-compose.yaml
+++ b/react_basics/docker-compose.yaml
@@ -11,5 +11,8 @@ services:
       - ./app:/var/www/html/app
     environment:
       - CHOKIDAR_USEPOLLING=true #Reactのファイルを更新したときに常に監視状態にする
-    command: sh -c 'cd app && npm start'
+    # build時は、commandはいったんコメントアウトして
+    # docker-compose run --rm app sh -c 'npx create-react-app app --template typescript'
+    # 実行したら、コメントアウトを解除する。
+    # command: sh -c 'cd app && npm start'
     
